[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/stereo_camera/stereo_camera.gd" type="Script" id=1]

[node name="stereo_camera" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
eyes_distance = 0.6
eyes_convergence = 18.0
fov = 60
near = 0.1
far = 100

[node name="Viewport_left" type="Viewport" parent="."]

rect = Rect2( 0, 0, 512, 600 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = false
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 3
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Camera_left" type="Camera" parent="Viewport_left"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 2
left = -0.5
right = 0.5
top = 0.5
bottom = -0.5
near = 0.1
far = 1000.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Viewport_right" type="Viewport" parent="."]

rect = Rect2( 0, 0, 512, 600 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = false
render_target/filter = true
render_target/gen_mipmaps = false
render_target/update_mode = 3
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Camera_right" type="Camera" parent="Viewport_right"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 2
left = -0.5
right = 0.5
top = 0.5
bottom = -0.5
near = 0.1
far = 1000.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="ViewportSprite_left" type="ViewportSprite" parent="."]

viewport = NodePath("../Viewport_left")
centered = false

[node name="ViewportSprite_right" type="ViewportSprite" parent="."]

viewport = NodePath("../Viewport_right")
centered = false
offset = Vector2( 512, 0 )


